Last Layout Break fixed

--- a/synerge-reader-frontend/src/App.css
+++ b/synerge-reader-frontend/src/App.css
@@ -271,7 +271,8 @@ width: 200px;
   font-size: 1rem;
   line-height: 1.6;
   color: black;
-  max-height: 650px;
+  min-height: 580px;
+  max-height: 580px;
   overflow-y: auto;
   white-space: pre-wrap;
   word-wrap: break-word;
