--- a/synerge-reader-frontend/src/GridApp.css
+++ b/synerge-reader-frontend/src/GridApp.css
@@ -18,6 +18,7 @@
 }
 
 
+
 .div4 {
     grid-column: 1 / -1;
     grid-row: 1;
@@ -40,11 +41,7 @@
     grid-row: 3;
     margin: 0;
 }
-.doc-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+
 
 
 .action-box{
@@ -60,6 +57,7 @@ box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
 background-color: white;
 
 }
+
 
 .box-contents{
     margin-top: 16px;
@@ -137,6 +135,30 @@ height: 110px
     min-width: 100px;
 }
 
+.file-info {
+    margin-top: 10px;
+    background: #f0f9ff;
+    border: 1px solid ;
+    border-radius: 8px;
+    padding: 12px 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #0369a1;
+    font-weight: 500;
+    font-size: 0.7em;
+}
+
+.file-info span {
+    font-weight: 200;
+    color: #0c4a6e;
+}
+
+.alpha-preview-text{
+   
+}
 
 @media (max-width: 768px) {
 
